--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,3 @@
-#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
@@ -17,14 +16,19 @@
 #
 
 # Build stage: Install necessary development tools for compilation and installation
-FROM postgres:16 AS build
+FROM debian:bullseye-slim AS build
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends --no-install-suggests \
-       bison \
-       build-essential \
-       flex \
-       postgresql-server-dev-16
+RUN set -xe ;\
+    apt update && apt install wget lsb-release gnupg2 -y ;\
+    sh -c 'echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list' ;\
+    wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - ;\
+    apt-get update ;\
+    apt-get install -y postgresql-server-dev-16 bison build-essential git flex; \
+    cd /tmp; \
+    git clone https://github.com/cybertec-postgresql/pg_crash; \
+    cd /tmp/pg_crash; \
+    PG_CONFIG=/usr/lib/postgresql/16/bin/pg_config make; \
+    PG_CONFIG=/usr/lib/postgresql/16/bin/pg_config make install
 
 COPY . /age
 
@@ -34,11 +38,14 @@ RUN make && make install
 
 
 # Final stage: Create a final image by copying the files created in the build stage
-FROM postgres:16
+FROM ghcr.io/cloudnative-pg/postgresql:16-standard-bookworm
+
+USER root
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends --no-install-suggests \
-    locales
+    locales barman-cli-cloud \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
     && locale-gen \
@@ -51,9 +58,11 @@ ENV LC_CTYPE=en_US.UTF-8
 COPY --from=build /usr/lib/postgresql/16/lib/age.so /usr/lib/postgresql/16/lib/
 COPY --from=build /usr/share/postgresql/16/extension/age--1.5.0.sql /usr/share/postgresql/16/extension/
 COPY --from=build /usr/share/postgresql/16/extension/age.control /usr/share/postgresql/16/extension/
+COPY --from=build /tmp/pg_crash/pg_crash.so /usr/lib/postgresql/16/lib/
 COPY docker/docker-entrypoint-initdb.d/00-create-extension-age.sql /docker-entrypoint-initdb.d/00-create-extension-age.sql
 
 # Change to the uid of postgres (26)
+RUN usermod -u 26 postgres
 USER 26
 
 CMD ["postgres", "-c", "shared_preload_libraries=age"]
